# rspt-extractor

./: .pre-commit-config.yaml  README.md  extract_v1.py  ham_check.py  inpsd.template  pyproject.toml  rspt_exchange.py  rspt_extract.py  rspt_runner.py  rspt_scf.py
examples/FePt/spin-001/: cfile  data  dmfile  jfile  out-1  out-2  out-3  out-4  out-scf  symt.inp
examples/FePt/spin-010/: cfile  data  dmfile  jfile  out-1  out-2  out-3  out-4  out-scf  symt.inp
examples/FePt/spin-100/: cfile  data  dmfile  jfile  out-1  out-2  out-3  out-4  out-scf  symt.inp
examples/YFe2/: data  out_last
examples/YFe2/Jij-01/: out
examples/YFe2/Jij-02/: out
examples/YFe2/Jij-03/: out
examples/YFe2/Jij-04/: out
examples/YFe2/Jij-05/: out
examples/YFe2/Jij-06/: out
src/rspt_extractor/: __init__.py  inpsd.template  rspt_data.py  rspt_exchange.py  rspt_extract.py  rspt_runner.py  rspt_scf.py
