[build-system]
requires = ["flit_core >=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "rspt-extractor"
version = "0.1.0"
description = "Tools to extract data from RSPt calculations"
readme = "README.md"
authors = [
    {name = "Anders Bergman", email = "anders.bergman@physics.uu.se"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering"
]

[project.urls]
"Documentation" = "https://example.com/docs"
"Source Code" = "https://github.com/your-username/rspt"

# Define scripts using the modern [project.scripts] format
[project.scripts]
rspt-runner = "rspt.rspt_runner:main"

